Fix deprecation warning in AbstractMessenger